--- a/Alexeev_Tarabukin/style.css
+++ b/Alexeev_Tarabukin/style.css
@@ -19,7 +19,7 @@ body {
      margin: auto auto;
      text-align: center;
      width: 80%;
-     height: 400px;
+     height: 1000px;
 }
  
 #navigation {
@@ -28,7 +28,7 @@ body {
      font-size: 13pt;
      float: left;
      width: 20%;
-     height: 400px;
+     height: 1000px;
 }
  
 #content {
@@ -40,20 +40,24 @@ body {
      height: 40px;
 }
  
-#footer {
-    background: #00BFFF;
-	width: 100%;
-	height: 40px;
+#button1 {
+    background: #D2691E;
+    color: #FFFFFF;
+}
+
+#button2 {
+    background: #D2691E;
+    color: #FFFFFF;
 }
 
 a{
-color:Snow;
+color: Snow;
 }
 a:link {
- color: #FF1493; 
+ color: #FFFFFF; 
  text-decoration: none;
  }
 a:hover {
- color:#FFFF00;
+ color:#FFFFFF;
  text-decoration: underline;
  }
