--- a/Alexeev_Tarabukin/style.css
+++ b/Alexeev_Tarabukin/style.css
@@ -13,7 +13,7 @@ body {
      height: 18px;
 }
  #container {
-     background: #FFD700;
+     background: #696969;
      color: #FFFAFA;
      font-size: 13pt;
      margin: auto auto;
